@@ -12,6 +12,9 @@ What's New in Python 3.3.3 release candidate 1?
 Core and Builtins
 -----------------
 
+- Issue #19098: Prevent overflow in the compiler when the recursion limit is set
+  absurbly high.
+
 - Issue #18942: sys._debugmallocstats() output was damaged on Windows.
 
 - Issue #18667: Add missing "HAVE_FCHOWNAT" symbol to posix._have_functions.
